--- a/package.json
+++ b/package.json
@@ -40,26 +40,29 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rollup-plugin-dts": "^6.2.1",
     "sass": "^1.89.0",
     "storybook": "^8.6.14",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
   "dependencies": {
     "@heroui/button": "^2.2.19",
+    "@heroui/react": "^2.7.8",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
-    "framer-motion": "^12.14.0",
-    "tailwindcss": "^3.4.0"
+    "framer-motion": "^12.14.0"
   },
   "eslintConfig": {
     "extends": [
